--- a/server/tomcat/web/WEB-INF/web.xml
+++ b/server/tomcat/web/WEB-INF/web.xml
@@ -1,17 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
+<web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
+
+    <!--Authentication-->
     <servlet>
         <servlet-name>LoginServlet</servlet-name>
         <servlet-class>control.auth.LoginServlet</servlet-class>
     </servlet>
+    <servlet-mapping>
+        <servlet-name>LoginServlet</servlet-name>
+        <url-pattern>/auth/login</url-pattern>
+    </servlet-mapping>
     <servlet>
         <servlet-name>RegisterServlet</servlet-name>
         <servlet-class>control.auth.RegisterServlet</servlet-class>
     </servlet>
+    <servlet-mapping>
+        <servlet-name>RegisterServlet</servlet-name>
+        <url-pattern>/auth/register</url-pattern>
+    </servlet-mapping>
     <servlet>
         <servlet-name>ActivateServlet</servlet-name>
         <servlet-class>control.auth.ActivateServlet</servlet-class>
     </servlet>
+    <servlet-mapping>
+        <servlet-name>ActivateServlet</servlet-name>
+        <url-pattern>/auth/activate</url-pattern>
+    </servlet-mapping>
     <servlet>
         <servlet-name>ResetPasswordServlet</servlet-name>
         <servlet-class>control.auth.ResetPasswordServlet</servlet-class>
@@ -20,17 +36,37 @@
         <servlet-name>LoginGoogleServlet</servlet-name>
         <servlet-class>control.auth.LoginGoogleServlet</servlet-class>
     </servlet>
+    <servlet-mapping>
+        <servlet-name>ResetPasswordServlet</servlet-name>
+        <url-pattern>/auth/recovery</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LoginGoogleServlet</servlet-name>
+        <url-pattern>/auth/googleLogin</url-pattern>
+    </servlet-mapping>
+
+    <!--Profile-->
     <servlet>
         <servlet-name>Profile</servlet-name>
         <servlet-class>control.profile.Profile</servlet-class>
     </servlet>
-    <servlet>
-        <servlet-name>OrderServlet</servlet-name>
-        <servlet-class>packages.wrap.OrderServlet</servlet-class>
-    </servlet>
+    <servlet-mapping>
+        <servlet-name>Profile</servlet-name>
+        <url-pattern>/profile</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>EditProfile</servlet-name>
+        <url-pattern>/editprofile</url-pattern>
+    </servlet-mapping>
     <servlet>
         <servlet-name>EditProfile</servlet-name>
         <servlet-class>control.profile.EditProfile</servlet-class>
+    </servlet>
+
+    <!--Product-->
+    <servlet>
+        <servlet-name>OrderServlet</servlet-name>
+        <servlet-class>packages.wrap.OrderServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>Test</servlet-name>
@@ -41,36 +77,8 @@
         <servlet-class>packages.wrap.CartServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>LoginServlet</servlet-name>
-        <url-pattern>/login</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>RegisterServlet</servlet-name>
-        <url-pattern>/register</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
         <servlet-name>Test</servlet-name>
         <url-pattern>/Test</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>ActivateServlet</servlet-name>
-        <url-pattern>/activate</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>ResetPasswordServlet</servlet-name>
-        <url-pattern>/recovery</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>LoginGoogleServlet</servlet-name>
-        <url-pattern>/LoginGoogleServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>Profile</servlet-name>
-        <url-pattern>/profile</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>EditProfile</servlet-name>
-        <url-pattern>/editprofile</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>CartServlet</servlet-name>
