--- a/server/tomcat/web/WEB-INF/web.xml
+++ b/server/tomcat/web/WEB-INF/web.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
-
     <!--Authentication-->
+
     <servlet>
         <servlet-name>LoginServlet</servlet-name>
         <servlet-class>control.auth.LoginServlet</servlet-class>
@@ -12,6 +13,14 @@
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/auth/login</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>ManagerAccount</servlet-name>
+        <servlet-class>control.account.ManagerAccount</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>UpdateUserProfile</servlet-name>
+        <servlet-class>control.account.UpdateUserProfile</servlet-class>
+    </servlet>
     <servlet>
         <servlet-name>RegisterServlet</servlet-name>
         <servlet-class>control.auth.RegisterServlet</servlet-class>
@@ -46,6 +55,7 @@
     </servlet-mapping>
 
     <!--Profile-->
+
     <servlet>
         <servlet-name>Profile</servlet-name>
         <servlet-class>control.profile.Profile</servlet-class>
@@ -64,6 +74,7 @@
     </servlet>
 
     <!--Product-->
+    
     <servlet>
         <servlet-name>OrderServlet</servlet-name>
         <servlet-class>packages.wrap.OrderServlet</servlet-class>
@@ -87,5 +98,13 @@
     <servlet-mapping>
         <servlet-name>OrderServlet</servlet-name>
         <url-pattern>/order</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManagerAccount</servlet-name>
+        <url-pattern>/manage/profile</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UpdateUserProfile</servlet-name>
+        <url-pattern>/manage/profile/user</url-pattern>
     </servlet-mapping>
 </web-app>
