--- a/server/tomcat/nbproject/private/private.properties
+++ b/server/tomcat/nbproject/private/private.properties
@@ -1,6 +1,6 @@
-deploy.ant.properties.file=/home/slightlywind/.netbeans/21/tomcat101.properties
-j2ee.server.home=/usr/share/tomcat10
-j2ee.server.instance=tomcat101:home=/usr/share/tomcat10
+deploy.ant.properties.file=C:\\Users\\PC\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
+j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
