--- a/server/tomcat/web/WEB-INF/web.xml
+++ b/server/tomcat/web/WEB-INF/web.xml
@@ -14,8 +14,8 @@
         <url-pattern>/auth/login</url-pattern>
     </servlet-mapping>
     <servlet>
-        <servlet-name>ManagerAccount</servlet-name>
-        <servlet-class>control.account.ManagerAccount</servlet-class>
+        <servlet-name>ManageAccount</servlet-name>
+        <servlet-class>control.account.ManageAccount</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>UpdateUserProfile</servlet-name>
@@ -100,11 +100,15 @@
         <url-pattern>/order</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>ManagerAccount</servlet-name>
+        <servlet-name>ManageAccount</servlet-name>
         <url-pattern>/manage/profile</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>UpdateUserProfile</servlet-name>
         <url-pattern>/manage/profile/user</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UpdateUserProfile</servlet-name>
+        <url-pattern>/manage/profile/staff</url-pattern>
     </servlet-mapping>
 </web-app>
