--- a/.gitignore
+++ b/.gitignore
@@ -21,19 +21,19 @@
 hs_err_pid*
 replay_pid*
 
-temp.sql
+**temp**
 
 # NetBeans specific #
-nbproject/private/
-build/
-nbbuild/
-nbdist/
-nbactions.xml
-nb-configuration.xml
+server/tomcat/nbproject/private/
+server/tomcat/nbproject/genfiles.properties
+server/tomcat/build/
+server/tomcat/nbbuild/
+server/tomcat/nbdist/
+server/tomcat/nbactions.xml
+server/tomcat/nb-configuration.xml
 
 # Class Files #
 *.class
 
 # Package Files #
 *.ear
-/server/tomcat/dist/
